--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>transaction</name>
-	<description>Code chalange for Number 26</description>
+	<description>Code challenge for Number 26</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
